--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -2,4 +2,6 @@ target 'iosApp' do
   use_frameworks!
   platform :ios, '16.0'
   pod 'shared', :path => '../shared'
+  pod 'remote', :path => '../core/remote'
+  pod 'local', :path => '../core/local'
 end
