add new gitignore item

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ xcuserdata
 /iosApp/Pods/Target Support Files/remote/remote.debug.xcconfig
 /iosApp/Pods/Local Podspecs/remote.podspec.json
 /iosApp/Pods/Target Support Files/remote/remote.release.xcconfig
+/iosApp/iosApp.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
