--- a/base.gradle
+++ b/base.gradle
@@ -12,7 +12,7 @@ kotlin {
 
     sourceSets {
         commonMain.dependencies {
-
+            implementation(project(":core:common"))
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
