comment line modified

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ xcuserdata
 /iosApp/Pods/Local Podspecs/remote.podspec.json
 /iosApp/Pods/Target Support Files/remote/remote.release.xcconfig
 /iosApp/iosApp.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+/iosApp/iosApp.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
